<resources>
    <string name="app_name">Tambola</string>
    <string name="host">Host</string>
    <string name="play">Play</string>
    <string name="num_players_textView">No. of Players</string>
    <string name="_00">00</string>
    <string name="total_price_money">Price Money</string>
    <string name="prize_distribution">Prize Distribution</string>
    <string name="first_line">First Line</string>
    <string name="last_line">Last Line</string>
    <string name="middle_line">Middle Line</string>
    <string name="high_low"><![CDATA[High & Low]]></string>
    <string name="full_house">Full House</string>
    <string name="start">start</string>
    <string name="room_code">Room Code</string>
    <string name="share_code">share code</string>
    <string name="ticket_price_textView">Ticket Price</string>
    <string name="_01">01</string>
    <string name="buy">Buy</string>
    <string name="generate_code">Generate Code</string>
    <string name="save">save</string>
    <string name="quantity">Quantity</string>
    <string name="sold_tickets">Sold Tickets</string>
    <string name="class_teacher_name_example">Ajay Kasana</string>
    <string name="player_profile">player profile</string>
    <string name="waiting_for_host_to_start">waiting for host to start</string>
    <string name="room_example">Room :-</string>
    <string name="publish">publish</string>
    <string name="claims">Claims</string>
    <string name="claim">claim</string>
    <string name="ticket_id">Ticket Id:-</string>
    <string name="claim_type">Claim type:-</string>
    <string name="claim_ticket">Claim Ticket:-</string>
    <string name="original_ticket">Original Ticket:-</string>
    <string name="status">status</string>
    <string name="fl">FL</string>
    <string name="ml">ML</string>
    <string name="ll">LL</string>
    <string name="f_l">HL</string>
    <string name="fh">FH</string>
    <string name="claimed">Claimed</string>
    <string name="blocked">blocked</string>
    <string name="name">Name:-</string>
    <string name="ajay">Ajay</string>
    <string name="winner_board">Winner Board</string>
    <string name="block">block</string>
    <string name="joined_players">Joined Players</string>
    <string name="num_of_tickets">Number of Tickets</string>
    <string name="_50">50</string>
    <string name="developed_by_indicorpit">Developed by IndiCorp</string>
    <string name="contact_us">Contact Us</string>
    <string name="enter_name">Enter Name</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="enter">ENTER</string>
    <string name="enter_room_code">Enter Room Code</string>
    <string name="plus_symbol">+</string>
    <string name="early_five">Early Five</string>
    <string name="ladoo">Ladoo</string>
    <string name="king_corners">King Corners</string>
    <string name="queen_corners">Queen Corners</string>
    <string name="bamboo">Bamboo</string>
    <string name="early7">Early7</string>
    <string name="second_house">Second House</string>
    <string name="sh">SH</string>
    <string name="e5">E5</string>
    <string name="l">L</string>
    <string name="kc">KC</string>
    <string name="qc">QC</string>
    <string name="b">B</string>
    <string name="home">Home</string>
    <string name="banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="total">Total</string>
    <string name="_12">  </string>
    <string name="share_room_data">Share Result</string>
    <string name="subtract_symbol">-</string>

</resources>