<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/rectangle_background"
    android:layout_marginTop="20dp"
    android:layout_height="wrap_content">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/players_ticket_recycleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/claims_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/claims"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/players_ticket_recycleView" />

    <TextView
        android:id="@+id/claim_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_down_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/claims_textView" />




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/claim_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="10dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/claim_arrow"
        tools:layout_editor_absoluteX="2dp">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/orange_square"
            android:gravity="center"
            android:text="@string/fl"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/first_line_claim_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_line"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="@+id/textView6" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/first_line_claim_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/light_green"
            android:text="@string/claim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toEndOf="@+id/first_line_claim_textView"
            app:layout_constraintTop_toTopOf="@+id/first_line_claim_textView" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/green_square"
            android:gravity="center"
            android:text="@string/ml"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/middle_line_claim_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/middle_line"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toEndOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/middle_line_claim_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/light_green"
            android:text="@string/claim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toEndOf="@+id/middle_line_claim_textView"
            app:layout_constraintTop_toTopOf="@+id/middle_line_claim_textView" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/chocolate_square"
            android:gravity="center"
            android:text="@string/ll"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <TextView
            android:id="@+id/last_line_claim_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_line"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toEndOf="@+id/textView8"
            app:layout_constraintTop_toTopOf="@+id/textView8" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/last_line_claim_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/light_green"
            android:text="@string/claim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toEndOf="@+id/last_line_claim_textView"
            app:layout_constraintTop_toTopOf="@+id/last_line_claim_textView" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/blue_square"
            android:gravity="center"
            android:text="@string/f_l"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />


        <TextView
            android:id="@+id/high_low_claim_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high_low"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toEndOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/textView9" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/high_low_claim_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/light_green"
            android:text="@string/claim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toEndOf="@+id/high_low_claim_textView"
            app:layout_constraintTop_toTopOf="@+id/high_low_claim_textView" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/pink_square"
            android:gravity="center"
            android:text="@string/fh"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/full_house_claim_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_house"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toEndOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/full_house_claim_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/light_green"
            android:text="@string/claim"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.936"
            app:layout_constraintStart_toEndOf="@+id/full_house_claim_textView"
            app:layout_constraintTop_toTopOf="@+id/full_house_claim_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>