<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_marginEnd="@dimen/margin_end"
    android:layout_marginStart="@dimen/margin_start"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/margin_start"
    android:background="@color/transparent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/circular_corner_enter_name_background"
    >
        <TextView
            android:id="@+id/enter_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:text="@string/enter_name"
            android:textColor="@color/indicorp_dark_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:autofillHints="name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/enter_name_textView"
            app:layout_constraintTop_toBottomOf="@+id/enter_name_textView"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/cancel"
            android:textColor="@color/indicorp_dark_blue"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ok_button"
            app:layout_constraintTop_toTopOf="@+id/ok_button" />

        <TextView
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textSize="15sp"
            android:layout_marginTop="@dimen/margin_start"
            android:textColor="@color/indicorp_dark_blue"
            android:layout_marginEnd="@dimen/margin_end"
            app:layout_constraintEnd_toEndOf="@+id/name_edittext"
            app:layout_constraintTop_toBottomOf="@+id/name_edittext" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>